OAK-64: privilege mgt (minor improvement)
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk/oak-core@1450851 13f79535-47bb-0310-9956-ffa450edef68